# nas-backup-tool

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run-container.sh  run-local.sh
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yaml
config/: backup_config.yaml
scripts/: format.sh  test.sh
src/: __init__.py  backup_manager.py  email_sender.py  main.py  models.py  nas_controller.py  utils.py
tests/: __init__.py  test_backup_manager.py  test_models.py  test_utils.py
