[project]
name = "nas-backup-tool"
version = "0.1.0"
description = "Automated NAS backup tool"
requires-python = ">=3.12"
dependencies = [
    "wakeonlan==2.1.0",
    "PyYAML==6.0.1",
    "schedule==1.1.0",
    "asyncssh>=2.19.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
